Fixed laggy ImageCropper
:bug: Fixed update running everytime the image is updated, now only updates when clicking to Set.
:arrow_up: Updated styled components

--- a/client/src/components/image/image.module.css
+++ b/client/src/components/image/image.module.css
@@ -2,3 +2,18 @@
     width: 10rem;
     height: 10rem;
 }
+
+.cropper {
+    width: 20rem;
+}
+
+.input[type='file'] {
+    display: none;
+}
+
+.customFileButton {
+    background-color: grey;
+    padding: 1px;
+    border-radius: 2px;
+    color: white;
+}
