--- a/client/src/components/servers/server.module.css
+++ b/client/src/components/servers/server.module.css
@@ -32,3 +32,7 @@
     transition: ease-in-out 0.2s;
     border-radius: 20px;
 }
+
+.serverContextMenu:last-child {
+    color: red;
+}
